@@ -2,6 +2,7 @@
 
 	* clos1way2.ok, clos1way3.ok, clos1way4.ok, clos1way5.ok: Update
 	after Eli's code changes.
+	* Makefile.am (pty1): Disable test on z/OS.
 
 2016-04-08  Eli Zaretskii  <eliz@gnu.org>
 
